部分別PVデータを作品データに追加＆取得機能
ただし取得UIは封印状態

--- a/npva/npva.csproj
+++ b/npva/npva.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Chart\Series.cs" />
     <Compile Include="DB\Author.cs" />
     <Compile Include="DB\DailyScore.cs" />
+    <Compile Include="DB\PartPv.cs" />
     <Compile Include="DB\Title.cs" />
     <Compile Include="DetailListView.cs">
       <SubType>UserControl</SubType>
