--- a/npva/App.config
+++ b/npva/App.config
@@ -1,6 +1,63 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="npva.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <npva.Properties.Settings>
+            <setting name="MovingAverageByLeft" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StartupAuthor" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AuthorSummaryPvLength" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="CCIgnoreTotalPv" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreDailyPv" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreMovingAverage" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreBacklog7" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreBacklog30" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreBacklog90" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreBacklog180" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreBacklog365" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CCIgnoreAllTime" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AnalizerGetPartialPV" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChartExcludePV" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChartExcludeUnique" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChartExcludeScore" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </npva.Properties.Settings>
+    </userSettings>
 </configuration>
