画像の保存機能

--- a/npva/App.config
+++ b/npva/App.config
@@ -58,6 +58,15 @@
             <setting name="ChartExcludeScore" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ChartSaveAsIs" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChartSaveWidth" serializeAs="String">
+                <value>640</value>
+            </setting>
+            <setting name="ChartSaveHeight" serializeAs="String">
+                <value>480</value>
+            </setting>
         </npva.Properties.Settings>
     </userSettings>
 </configuration>
