--- a/npva/Properties/Settings.settings
+++ b/npva/Properties/Settings.settings
@@ -50,5 +50,14 @@
     <Setting Name="ChartExcludeScore" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ChartSaveAsIs" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ChartSaveWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">640</Value>
+    </Setting>
+    <Setting Name="ChartSaveHeight" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">480</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
