部位別PV週間表示用開始曜日設定と日間表示用表示期間設定(設定値のみ）

--- a/npva/App.config
+++ b/npva/App.config
@@ -67,6 +67,12 @@
             <setting name="ChartSaveHeight" serializeAs="String">
                 <value>480</value>
             </setting>
+            <setting name="PPVWeekFromMonday" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="PPVDays" serializeAs="String">
+                <value>10</value>
+            </setting>
         </npva.Properties.Settings>
     </userSettings>
 </configuration>
