--- a/npva/Properties/Settings.settings
+++ b/npva/Properties/Settings.settings
@@ -59,5 +59,11 @@
     <Setting Name="ChartSaveHeight" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">480</Value>
     </Setting>
+    <Setting Name="PPVWeekFromMonday" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="PPVDays" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
