任意長の日数のグラフを出せるようにする

--- a/npva/App.config
+++ b/npva/App.config
@@ -73,6 +73,12 @@
             <setting name="PPVDays" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="CCIncludeUserRange" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CCUserRange" serializeAs="String">
+                <value>100</value>
+            </setting>
         </npva.Properties.Settings>
     </userSettings>
 </configuration>
