--- a/npva/Properties/Settings.settings
+++ b/npva/Properties/Settings.settings
@@ -65,5 +65,11 @@
     <Setting Name="PPVDays" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="CCIncludeUserRange" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CCUserRange" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
