部位別Pvの総合計をチャートにした
機能的には期限を切って累計できるようにしているがUIから表示できるのは全期間のみ。

--- a/npva/npva.csproj
+++ b/npva/npva.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Chart\IChart.cs" />
     <Compile Include="Chart\IDrawContext.cs" />
     <Compile Include="Chart\ChartParameter.cs" />
+    <Compile Include="Chart\PartialPvChartConstructor.cs" />
     <Compile Include="Chart\Series.cs" />
     <Compile Include="ConfigulationForm.cs">
       <SubType>Form</SubType>
